Adjust source with offsets